fix gap

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -11,7 +11,7 @@
 #main-panel{
     min-height: 80%;
     grid-template-columns: repeat(1,1fr);
-    gap: 1em;
+    gap: 0.5em;
     padding-top: 1rem;
 }
 #secondary-panel{
